<resources>
    <string name="app_name">Phone</string>
    <string name="ders_1">1. Ders</string>
    <string name="ders_2">2. Ders</string>
    <string name="ders_3">3. Ders</string>
    <string name="ders_4">4. Ders</string>
    <string name="ders_5">5. Ders</string>
    <string name="ders_6">6. Ders</string>
    <string name="ders_7">7. Ders</string>
    <string name="ders_8">8. Ders</string>
    <string name="ders_9">9. Ders</string>
    <string name="ders_10">10. Ders</string>
    <string-array name="spinnerdizisi">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>







</resources>
