<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".hesap">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ders Sayınız: "
            android:textSize="24sp" />

        <TextView
            android:id="@+id/dsayi"
            android:layout_width="177dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="Ders Adı  "
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="Ortalama"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="Ders Saati"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ders_1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ort_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="5"
        android:inputType="number"
        android:shadowColor="@color/colorPrimary"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/saat_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="5"
        android:inputType="numberDecimal"
        android:textSize="20sp" />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ders_2"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ort_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="5"
        android:textSize="20sp"
        android:inputType="number" />

    <EditText
        android:id="@+id/saat_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="5"
        android:textSize="20sp"
        android:inputType="numberDecimal" />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ders_3"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ort_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="5"
        android:textSize="20sp"
        android:inputType="number" />

    <EditText
        android:id="@+id/saat_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="5"
        android:textSize="20sp"
        android:inputType="numberDecimal" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ders_4"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ort_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="5"
        android:textSize="20sp"
        android:inputType="number" />

    <EditText
        android:id="@+id/saat_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="5"
        android:textSize="20sp"
        android:inputType="numberDecimal" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ders_4"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ort_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="5"
        android:textSize="20sp"
        android:inputType="number" />

    <EditText
        android:id="@+id/saat_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="5"
        android:textSize="20sp"
        android:inputType="numberDecimal" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ders_6"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ort_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="5"
        android:inputType="number" />

    <EditText
        android:id="@+id/saat_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="5"
        android:textSize="20sp"
        android:inputType="numberDecimal" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ders_7"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ort_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="5"
        android:inputType="number" />

    <EditText
        android:id="@+id/saat_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="5"
        android:textSize="20sp"
        android:inputType="numberDecimal" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ders_8"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ort_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="5"
        android:inputType="number" />

    <EditText
        android:id="@+id/saat_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="5"
        android:textSize="20sp"
        android:inputType="numberDecimal" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ders_9"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ort_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="5"
        android:inputType="number" />

    <EditText
        android:id="@+id/saat_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="5"
        android:textSize="20sp"
        android:inputType="numberDecimal" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ders_10"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ort_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="5"
        android:inputType="number" />

    <EditText
        android:id="@+id/saat_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="5"
        android:textSize="20sp"
        android:inputType="numberDecimal" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/hesapla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:ellipsize="none"
        android:text="Hesapla"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorAccent"
        android:textColorHint="@android:color/background_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/sonuc"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:ellipsize="none"
        android:text=""
        android:textSize="24sp"
        android:visibility="visible"
        android:gravity="center"
        app:autoSizeTextType="uniform" />
</LinearLayout>

</LinearLayout>